2021-06-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        [SOUP] Add Timing-Allow-Origin checks to NetworkDataTaskSoup
        https://bugs.webkit.org/show_bug.cgi?id=227008
        <rdar://problem/79384792>

        Reviewed by Adrian Perez de Castro.

        * platform/glib/TestExpectations:

2021-06-17  Diego Pino Garcia  <dpino@igalia.com>

        [GTK][WPE] Unreviewed test gardening. Update baselines after r278974.

        There are GTK and WPE tests that have the same text baseline but the
        corresponding PNG image is different. In this case, I have preferred
        to keep a specific text baseline for each port, instead of
        promoting the text baseline to GLIB.

        * platform/gtk/svg/text/foreignObject-repaint-expected.txt: Copied from LayoutTests/platform/glib/svg/text/foreignObject-repaint-expected.txt.
        * platform/gtk/svg/text/foreignObject-text-clipping-bug-expected.png:
        * platform/gtk/svg/text/foreignObject-text-clipping-bug-expected.txt:
        * platform/gtk/svg/text/text-align-01-b-expected.png:
        * platform/gtk/svg/text/text-align-01-b-expected.txt:
        * platform/gtk/svg/text/text-align-02-b-expected.png:
        * platform/gtk/svg/text/text-align-02-b-expected.txt:
        * platform/gtk/svg/text/text-align-03-b-expected.png:
        * platform/gtk/svg/text/text-align-03-b-expected.txt:
        * platform/gtk/svg/text/text-align-04-b-expected.png:
        * platform/gtk/svg/text/text-align-04-b-expected.txt:
        * platform/gtk/svg/text/text-align-05-b-expected.png:
        * platform/gtk/svg/text/text-align-05-b-expected.txt:
        * platform/gtk/svg/text/text-align-06-b-expected.png:
        * platform/gtk/svg/text/text-align-06-b-expected.txt:
        * platform/gtk/svg/text/text-deco-01-b-expected.png:
        * platform/gtk/svg/text/text-deco-01-b-expected.txt:
        * platform/gtk/svg/text/text-fonts-01-t-expected.png:
        * platform/gtk/svg/text/text-fonts-01-t-expected.txt: